[tool.poetry]
name = "gt"
version = "0.1.0"
description = ""
authors = ["Guðmundur Björn Birkisson <gbbirkisson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
feedparser = "^6.0.10"
requests = "^2.31.0"
plotly = "^5.17.0"

[tool.poetry.scripts]
gt = "gt:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
